--- a/cookbook/Strings.ipynb
+++ b/cookbook/Strings.ipynb
@@ -191,6 +191,221 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bottle'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "var word = \"bottles\";\n",
+    "//word.slice(-1); //s\n",
+    "word.slice(0,word.length-1);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// indexOf(character) returns the index of first occurrence of character\n",
+    "var word = \"joe@gmail.com\";\n",
+    "word.indexOf(\"@\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// if there is no occurrence, it returns -1\n",
+    "var word = \"joe!gmail.com\";\n",
+    "word.indexOf(\"@\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h\n",
+      "hello there\n",
+      "hello there\n",
+      "ello there\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// substring(start index, <opt> end index -1) grabs parts of a string\n",
+    "var testWord = \"hello there\";\n",
+    "console.log(testWord.substring(0,1));\n",
+    "console.log(testWord.substring(0));\n",
+    "console.log(testWord.substring(-1));\n",
+    "console.log(testWord.substring(1));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SLICE vs SUBSTRING\n",
+    "\n",
+    "What they have in common:\n",
+    "\n",
+    "If start equals stop: returns an empty string\n",
+    "If stop is omitted: extracts characters to the end of the string\n",
+    "If either argument is greater than the string's length, the string's length will be used instead.\n",
+    "\n",
+    "Distinctions of substring():\n",
+    "\n",
+    "If start > stop, then substring will swap those 2 arguments.\n",
+    "If either argument is negative or is NaN, it is treated as if it were 0.\n",
+    "\n",
+    "Distinctions of slice():\n",
+    "\n",
+    "If start > stop, slice() will NOT swap the 2 arguments.\n",
+    "If start is negative: sets char from the end of string, exactly like substr() in Firefox. This behavior is observed in both Firefox and IE.\n",
+    "If stop is negative: sets stop to: string.length – Math.abs(stop) (original value)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// NUMBER will convert a string to its numeric equivalent\n",
+    "var testVal = \"4\";\n",
+    "console.log(typeof(Number(testVal)));\n",
+    "Number(testVal);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'There is no \"i\" in team'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// Use '\\' to escape\n",
+    "var words = \"There is no \\\"i\\\" in team\";\n",
+    "words;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "/* This is more interesting \n",
+    "\n",
+    "var interestLevel = 10;\n",
+    "\n",
+    "*/"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
